# paddock-ts-local

./: .gitignore  .gitmodules  =3  Args.py  Args_to_ds.py  README (2).md  README.md  Untitled.ipynb  debug_environmental.ipynb  diagnostics.md  directory_structure.md  ds_from_dea.py  ds_from_stac.py  env 9.58.24 PM.yml  env.yml  env_2.yml  error.md  ex_query.py  get_outputs.py  issues.md  mkdocs.yml  paddock-ts-env.yml  paddock-ts-local.yml  preprocess.py  pyproject.toml  something.tif  something.tif.aux.xml  terrain_tiles.xml  test.py  test_bbox_conversion.py  test_clay.tif  viz_polygons.py
PaddockTS/: check_status.py  checkpoint_plots.py  config.py  download_ds2.py  ds2_conf.py  filter.py  fractional_cover.py  generate_outputs.py  get_outputs.py  legend.py  ndwi_fourier_geotiff.py  paddock_conf.py  paddock_ts.py  plotting_functions.py  query.py  run_environmental.py  sam_geo_paddocks.py  sentinel2_to_paddockTS_pipeline.py  sentinel2_to_paddockTS_simple.py  sentinel2_to_paddock_pipeline.py  sentinel2_to_paddock_simple.py  setup.py  status.py  topographic_plots.py  utils.py
PaddockTS.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
PaddockTSLocal/: Args.py  CustomSamGeo.py  CustomSamGeoAutomaticMaskGenerator.py  DownloadDS2.py  IndicesAndVegFrac.py  Legend.py  Logger.py  NDWIFourierGeotiff.py  PaddockTS.py  Query.py  SamGeoPaddocks.py  VegFrac.py  __init__.py  checkpoint_plots.py  compute_ndwi_fourier.py  download.py  download_ds2.py  ds_from_stac.py  environmental.py  generate_preprocessed_ds.py  indices.py  indices_and_veg_frac.py  legend.py  ndwi_fourier_geotiff.py  paddock_ts.py  plotting_functions.py  rescale_image.py  topographic_plots.py  utils.py  veg_frac.py
PaddockTSLocal 9.58.24 PM/: checkpoint_plots.py  filter.py  plotting_functions.py  sam_geo_paddocks.py
PaddockTSLocal 9.59.33 PM/: Query.py  download_ds2.py  fractional_cover.py  generate_outputs.py  ndwi_fourier_geotiff.py  paddock_ts.py  topographic_plots.py  utils.py
PaddockTSLocal.egg-info/: PKG-INFO  SOURCES.txt
PaddockTSLocal.egg-info 9.58.24 PM/: PKG-INFO  top_level.txt
PaddockTSLocal.egg-info 9.59.33 PM/: SOURCES.txt
artifacts/: Milgadara_paddock-polygons_2024-12-17_12-45-58.json  PaddockSet1.gpkg  test_paddocks_WA.gpkg
configs/: config1.json
demo/: 01_quickstart.ipynb  02_pipeline_stages.ipynb  03_custom_paddocks.ipynb  04_inspect_videos.ipynb  05_inspect_paddocks.ipynb  06_inspect_time_series.ipynb  07_inspect_phenology.ipynb  README.md  download_ds2.py  filter.py  get_outputs.py  query.py
dist 10-51-14-319/: paddocktslocal-0.1.0-py3-none-any.whl
docs/: getting-started.md  (+2 more)
(+314 files in other folders)
